--- a/Social_project/social_app/templates/registration/login.html
+++ b/Social_project/social_app/templates/registration/login.html
@@ -11,6 +11,7 @@
   <p><strong>-- OR --</strong></p>
   <!-- <a href="{% url 'social:begin' 'github' %}">Login with GitHub</a><br> -->
   <a href="{% url 'social:begin' 'twitter' %}">Login with Twitter</a>
-
+  <br>
   <a href="{% url 'social:begin' 'google-oauth2' %}">Login with Google</a><br>
+  <!-- <a href="{% url 'logout' %}?next=/"> Logout</a> -->
 {% endblock %}
